chromeos: fixs cursor lookup for WebContents

Only use the cursor at an embed point if the embedder isn't intercepting
events. I'm assuming that if the embedder is intercepting events, then it's
setting the cursor. This is the case for WebContents.

BUG=877099
TEST=covered by test

Change-Id: I04304a2ae8e668f5a7506378868c2a53eac7de0a
Reviewed-on: https://chromium-review.googlesource.com/1187409
Commit-Queue: Scott Violet <sky@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585659}
Former-commit-id: b9741588275be2c76aa651ff6509cc06c8b1c770